--- a/contents/config.yml
+++ b/contents/config.yml
@@ -2,7 +2,7 @@ title: ShaominXie's Homepage
 # page-top-title: Master's student
 site_description: Master's student
 
-email: "xieshaomin0805@163.com"
+📧email: "xieshaomin0805@163.com"
 top-section-bg-text: Be what you wanna be
 home-subtitle: Shaomin Xie&ensp;|&ensp;谢少敏
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+copyright-text: '&copy; Shaomin Xie 2023-2025. All Rights Reserved.'
