增加论文描述

--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: ShaominXie's Homepage
-# page-top-title: Master's student
+page-top-title: Shaomin Xie | 谢少敏
 site_description: Master's student
 
 📧email: "xieshaomin0805@163.com"
